_includes/css/custom.css
/* Site Level */
body {
  font-family: "PT Sans", "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
}

h4, .h4, h5, .h5, h6, .h6 {
    margin-top: 30px;
}

code {
  background-color: #eee;
  color: #393318;
}

.top-buffer { margin-top:20px; }

.btn-default {
  background: #{{ site.color.secondary-dark }};
  padding: 15px 45px;
}
.btn-default:hover {
  background: #{{ site.color.secondary }};
}

/* Home */

header hr.star-light:after,
header hr.star-wide:after,
header hr.star-primary:after {
    content: "\f121";
}

header > div.container > div > div > img {
    width: 85%
    /* height: 300px;
    border-radius: 150px; */
}

/* About */

section#about hr.star-light:after,
section#about hr.star-primary:after {
    content: "\f118";
}

section#about div#interests hr.star-wide:after,
section#about hr.star-narrow:after {
    content: "\f085";
}

section#about div.row {
margin: 10px 0;
}

section#about div#left p {
  text-align: right;
}

section#about div#night p {
  color: #999999;
}

section#about p a {
  color: #{{ site.color.secondary-light }};
}

section#about div#history_items p a {
  color: #999999;
}

section#about ul  {
  padding: 0;
  margin: 0 0 15px 0;
  margin-bottom: 15px;
  text-align: center;
}

section#about h4  {
  padding: 0;
  margin: 0 0 15px 0;
  margin-bottom: 15px;
  text-align: center;
}

section#about li  {
  list-style-type: none;
  color: #f2f2f2;
}

section#about li:nth-child(odd)  {
  list-style-type: none;
  color: #999999;
}

/* Portfolio Grid */

section.port_grid {
  background: #fcfcfc;
}

#portfolio hr.star-light:after, #portfolio hr.star-primary:after {
    content: "\f0b1";
}

#portfolio .portfolio-item {
  text-align: center;
}

/* #portfolio .portfolio-item .portfolio-link {
  border: 1px solid #{{ site.color.secondary }};
} */

#portfolio .portfolio-item .portfolio-link .caption {
  background: #3b3b3b;
}

#portfolio .portfolio-item .portfolio-link .caption:hover {
  opacity: .5;
}

#portfolio .portfolio-item p a {
  font-family: "Lato";
  display: inline-block;
  width: 100%;
  padding: 10px 0 0 0;
}

/* Portfolio Posts */

.video-container {
  position: relative;
  width: 100%;
  padding-bottom: 56.25%;
  margin-bottom: 20px;
}

.video {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
}

.port_caption {
  font-size: 17px;
}

.portfolio-modal hr.star-primary:after {
  content: "\f0b1";
}

.portfolio-modal .close-modal .lr, .portfolio-modal .close-modal .lr .rl {
  background-color: #{{ site.color.primary }};
}

/* .portfolio-modal img {
  border: 1px solid #{{ site.color.secondary-light }};
} */

.portfolio-modal li {
  font-size: 20px;
}

.portfolio-modal p, .portfolio-modal li, .portfolio-modal h3, .portfolio-modal h4, .portfolio-modal h5 {
  color: #{{ site.color.blog-text }}
}

.portfolio-modal h3, .portfolio-modal h4, .portfolio-modal h5 {
  text-align: center;
  margin: 35px 0 22px 0;
}

.portfolio-modal p, .portfolio-modal ul{
  padding-top: 5px;
  padding-bottom: 5px;
}

.portfolio-modal .skills .skill {
  padding: 0;
}

.portfolio-modal .skills {
  margin-bottom: 50px;
}

.portfolio-modal .skills h5 {
  margin: 0 0 13px 0;
  text-align: center;
}

.portfolio-modal .skills ul {
  padding: 0px;
  margin: 0 0 0 0;
}

.portfolio-modal .skills ul li {
  text-align: center;
  padding: 3px 0;
}

.portfolio-modal div[class='entry text-left']{
  padding-bottom: 50px;
}

.portfolio-modal li  {
  list-style-type: none;
  color: #7a7a7a;
}

.portfolio-modal li:nth-child(odd)  {
  list-style-type: none;
  color: #{{ site.color.primary }};
}

.portfolio-modal .skills hr.star-light {
    border-color: #{{ site.color.primary }};
}

.portfolio-modal .skills hr.star-light:after {
    content: "\f085";
    color: #{{ site.color.primary }};
    background-color: white
}

/* Blog Grid */

section.blog_grid {
  background: #fcfcfc;
}

section#blog hr.star-primary:after {
  content: "\f0eb";
}

section#blog div.blog-item {
  padding: 15px 15px;
}

@media(min-width:768px) {
  section#blog div.blog-item {
    min-height: 129px;
  }
}

section#blog div.blog-item:hover{
  background: #999999;
}

section#blog div.blog-item{
  -webkit-transition: all ease .1s;
  -moz-transition: all ease .1s;
  transition: all ease .1s;
}

section#blog div.blog-item p{
  font-size: 17px;
}

section#blog div.blog-item h5{
  margin: 0 0 10px 0;
}

section#blog div.blog-item:hover h5, section#blog div.blog-item:hover p{
  color: #fff;
}

section#blog div.blog-item:hover a{
  text-decoration: none;
}

/* Blog Posts */
article.blog-post {
  font-family: "PT Serif", "PT Sans", "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

article.blog-post header {
  padding: 140px 0 30px 0
}

article.blog-post div.content {
  width: 800px;
  margin: 0 auto;
  padding: 20px 0 0 0;
}

article.blog-post #disqus_thread {
  padding: 0 0 50px 0;
}

article.blog-post hr.star-primary {
  border-color: white;
}

article.blog-post hr.star-primary:after {
  content: "\f0eb";
  color: white;
  background-color: #{{ site.color.primary }};
}

/* Account for header space that overlays articles and can cover up anchor links */
article.blog-post a.anchor {
  display: block;
  position: relative;
  top: -100px;
  visibility: hidden;
}

article.blog-post blockquote {
  background: #f1f1f1;
  border-left: 10px solid #ccc;
  margin: 1.5em 10px;
  padding: 0.8em 10px;
  quotes: '\201c' '\201d';
}
article.blog-post blockquote:before {
  color: #ccc;
  content: open-quote;
  font-size: 6em;
  line-height: 0.1em;
  margin-right: 0.1em;
  vertical-align: -0.4em;
}
article.blog-post blockquote p {
  display: inline;
  font-size: 1.1em;
}
article.blog-post blockquote p span{
  display: block;
  font-size: .8em;
  color: #999;
  margin: 10px 0;
}

article.blog-post {
  text-align: left;
}

article.blog-post p {
  margin: 1em 0;
}

article.blog-post ul, article.blog-post ol {
  margin: 20px 0 20px 10px;
}

article.blog-post p, article.blog-post li, article.blog-post a {
  font-size: 20px;
}

article.blog-post li {
  margin: 5px 0;
}

article.blog-post h, article.blog-post time {
  color: white;
}

article.blog-post h2, article.blog-post h3, article.blog-post h4, article.blog-post h5 {
  margin-top: 40px;
}

article.blog-post p, article.blog-post li, article.blog-post h3, article.blog-post h4, article.blog-post h5 {
  color: #{{ site.color.blog-text }}
}

article.blog-post a {
  color: #{{ site.color.link }}
}

article.blog-post footer {
  margin: 60px 0;
  display: block;
  width: auto;
  overflow: hidden;
  background: #{{ site.color.primary }};
}

article.blog-post footer div.container {
  width: 800px;
  padding: 30px 0;
}

article.blog-post footer a {
  display: block;
  width: 50%;
  float: left;
  margin: 1em 0;
  color: white;
}

article.blog-post footer .next {
  text-align: right;
}

/* Contact */

section#contact {
    color: #fff;
    background: #{{ site.color.primary }};
}

section#contact hr.star-primary {
  border-color: #fff;
}

section#contact hr.star-light:after, section#contact hr.star-primary:after {
    content: "\f095";
}

section#contact hr.star-primary::after {
  color: #fff;
  background-color: #{{ site.color.primary }};
}

section#contact form div.controls{
    background: #fff;
    margin: 10px;
}

section#contact button{
    color: #fff;
    background: #{{ site.color.secondary }};
}

section#contact button:hover{
    color: #fff;
    border-color: #{{ site.color.secondary }};
    background: #{{ site.color.secondary-dark }};
}

/* Footer */

.btn-social {
  font-size: 25px;
}

.btn-codeschool i{
  position: relative;
  top: 2px;
}

.btn-laracasts:hover, .btn-goodreads:hover{
  text-decoration: none;
}

.btn-laracasts, .btn-goodreads{
  font-weight: 900;
}

/* Footer tooltips */
footer .tooltip .tooltip-arrow{
  border-bottom-color: #{{ site.color.primary  }} !important;
}

footer .tooltip .tooltip-inner{
  background-color: #{{ site.color.primary  }};
}

footer .footer-col {
    margin-bottom: 30px;
}

footer p {
  font-size: 15px;
}

footer p a, footer p a:hover{
  color: #{{ site.color.secondary-light }};
}

pre.highlight {
  font-size: 16px;
  font-family: Consolas, monospace;
}

/* slideshow css*/

.mySlides {display: none}

.slide_img {
  max-height:500px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

/* Slideshow container */
.slideshow-container {
  height: 500px;
  position: relative;
  margin-bottom: -30px;
}

/* Next & previous buttons */
.slideprev, .slidenext {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  padding: 16px;
  margin-top: -22px;
  color: rgb(0, 0, 0);
  background-color: rgba(252, 252, 252, 0.6);
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
}

/* Position the "next button" to the right */
.slidenext {
  right: 0;
  border-radius: 3px 0 0 3px;
}

/* Position the "prev button" to the right */
.slideprev {
  left: 0;
  border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.slideprev:hover, .slidenext:hover {
  background-color: rgba(0, 0, 0, 0.6);
}

/* Caption text */
.captext {
  color: #000000;
  font-size: 15px;
  padding: 8px 12px;
  position: absolute;
  bottom: 8px;
  width: 100%;
  text-align: center;
}

/* Number text (1/3 etc) */
.numbertext {
  color: #000000;
  font-size: 12px;
  padding: 8px 12px;
  position: absolute;
  top: 0;
}

/* The dots/bullets/indicators */
.dot {
  cursor: pointer;
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: rgb(165, 165, 165);
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.dot_active, .dot:hover {
  background-color: #717171;
}

/* Fading animation */
.slide_fade {
  -webkit-animation-name: slide_fade;
  -webkit-animation-duration: 0.6s;
  animation-name: slide_fade;
  animation-duration: 0.6s;
}

@-webkit-keyframes slide_fade {
  from {opacity: 0} 
  to {opacity: 1}
}

@keyframes slide_fade {
  from {opacity: 0} 
  to {opacity: 1}
}

/* On smaller screens, decrease text size */
@media only screen and (max-width: 300px) {
  .slideprev, .slidenext,.captext {font-size: 11px}
}

/* %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% */

/* slideshow 2 css*/

/* Slideshow container */
.slideshow-container2 {
  height: 500px;
  position: relative;
  margin-bottom: -30px;
}

/* The dots/bullets/indicators */
.dot2 {
  cursor: pointer;
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: rgb(165, 165, 165);
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.dot2_active, .dot2:hover {
  background-color: #717171;
}

/* %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% */

/* slideshow 3 css*/

/* Slideshow container */
.slideshow-container3 {
  height: 500px;
  position: relative;
  margin-bottom: -30px;
}

/* The dots/bullets/indicators */
.dot3 {
  cursor: pointer;
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: rgb(165, 165, 165);
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.dot3_active, .dot3:hover {
  background-color: #717171;
}

.shadowed {
  max-height: 100px;
  margin-top: 40px;
  top: 50%;
  transform: translate(0, -50%);
	filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=0, OffY=0, Color='#fff')";
	filter: url(#drop-shadow);
	-webkit-filter: drop-shadow(0px 0px 4px rgba(255, 255, 255, 1));
	filter: drop-shadow(0px 0px 4px rgba(255, 255, 255, 1));
}

